added Logo and footer

--- a/index1.html
+++ b/index1.html
@@ -80,6 +80,7 @@
     <script src="assets/js/contactForm.js"></script>
     <script src="assets/js/clientPortal.js"></script>
     <script src="assets/js/blog.js"></script>
+    <script src="assets/js/settings.js"></script>
 </head>
 
 
@@ -1208,7 +1209,7 @@
 
                     <div class="footer-widget">
 
-                        <div class="logo">
+                           <div class="logo">
 
                             <a class="navbar-brand" href="#home"><img src="assets/img/LogoBlack.png" alt=""></a>
 
