--- a/blog1.html
+++ b/blog1.html
@@ -138,7 +138,7 @@
 
                                         <li class="nav-item">
 
-                                            <a class="nav-link active" href="/aitsthtml/index1.html">Home
+                                            <a class="nav-link active" href="/index1.html">Home
 
                                                 
 
