--- a/blog2.html
+++ b/blog2.html
@@ -81,7 +81,7 @@
     <script src="assets/js/jquery-1.12.4.min.js"></script>
     <script src="assets/js/blog.js"></script>
     <script src="assets/js/settings.js"></script>
-
+    <script src="assets/js/allBlogs.js"></script>
 </head>
 
 
@@ -143,7 +143,7 @@
 
                                         <li class="nav-item">
 
-                                            <a class="nav-link active" href="/aitsthtml/index1.html">Home
+                                            <a class="nav-link active" href="/index1.html">Home
 
 
 
@@ -275,31 +275,9 @@
     </div>
 
     <!-- container area -->
-    <div class="blog2-container">
-        <!-- Left Section -->
-        <div class="blog2-left-section">
-            <div class="blog2-vertical-text">Advice on optimizing retirement contributions.</div>
-            <img src="/assets/img/new-img/couple-making-deal-about-their-new-house (1).jpg" alt="Team Discussion"
-                class="blog2-team-image">
-        </div>
-
-        <!-- Right Section -->
-        <div class="blog2-right-section">
-            <div class="blog2-about-container">
-                <span class="blog2-about-label">ABOUT COMPANY</span>
-                <h1 class="blog2-title">Associates Income Tax Services (AITS)</h1>
-                <p class="blog2-description">
-                    Associates Income Tax Services (AITS) of Visalia is a full-service accounting, bookkeeping, and tax
-                    preparation firm serving both individuals and businesses.
-                </p>
-                <ul class="blog2-services-list">
-                    <li>Tailored advice for businesses and individuals.</li>
-                    <li>Industry-specific tax strategies.</li><br>
-                    <li>Support during IRS audits or inquiries.</li>
-                    <li>Representation and guidance for compliance.</li>
-                </ul>
-            </div>
-        </div>
+    
+    <div id="blog-container-2" class="blog2-container">
+      
     </div>
 
 
@@ -346,13 +324,13 @@
 
                                     <ul>
 
-                                        <li><i class="las la-check-circle"></i><a href="#home">Home</a></li>
+                                        <li><i class="las la-check-circle"></i><a href="/index1.html#home">Home</a></li>
 
-                                        <li><i class="las la-check-circle"></i><a href="#about">About Us</a></li>
+                                        <li><i class="las la-check-circle"></i><a href="/index1.html#about">About Us</a></li>
 
-                                        <li><i class="las la-check-circle"></i><a href="#blog">News</a></li>
+                                        <li><i class="las la-check-circle"></i><a href="/index1.html#blog">News</a></li>
 
-                                        <li><i class="las la-check-circle"></i><a href="#resource">Resources</a></li>
+                                        <li><i class="las la-check-circle"></i><a href="/index1.html#resource">Resources</a></li>
 
 
 
@@ -372,13 +350,13 @@
 
 
 
-                                        <li><i class="las la-check-circle"></i><a href="#client">Client Portal</a></li>
+                                        <li><i class="las la-check-circle"></i><a href="/index1.html#client">Client Portal</a></li>
 
-                                        <li><i class="las la-check-circle"></i><a href="#schedule">Schedule Appointment
+                                        <li><i class="las la-check-circle"></i><a href="/index1.html#schedule">Schedule Appointment
 
                                             </a></li>
 
-                                        <li><i class="las la-check-circle"></i><a href="#contact">Contact Us</a></li>
+                                        <li><i class="las la-check-circle"></i><a href="/index1.html#contact">Contact Us</a></li>
 
                                         <li><i class="las la-check-circle"></i><a href="#">Login</a></li>
 
