--- a/index1.html
+++ b/index1.html
@@ -647,7 +647,7 @@
 
                         </div>
                         
-                        <a style="margin-top: 10px;" href="/allBlogs">View all Blogs</a>
+                        <a style="margin-top: 10px;" href="/blog2.html">View all Blogs</a>
                     </div>
 
 
