--- a/blog1.html
+++ b/blog1.html
@@ -382,13 +382,13 @@
 
                                 <ul>
 
-                                    <li><i class="las la-check-circle"></i><a href="#home">Home</a></li>
+                                    <li><i class="las la-check-circle"></i><a href="/index1.html#home">Home</a></li>
 
-                                    <li><i class="las la-check-circle"></i><a href="#about">About Us</a></li>
+                                    <li><i class="las la-check-circle"></i><a href="/index1.html#about">About Us</a></li>
 
-                                    <li><i class="las la-check-circle"></i><a href="#blog">News</a></li>
+                                    <li><i class="las la-check-circle"></i><a href="/index1.html#blog">News</a></li>
 
-                                    <li><i class="las la-check-circle"></i><a href="#resource">Resources</a></li>
+                                    <li><i class="las la-check-circle"></i><a href="/index1.html#resource">Resources</a></li>
 
                                    
 
@@ -408,15 +408,15 @@
 
                                     
 
-                                    <li><i class="las la-check-circle"></i><a href="#client">Client Portal</a></li>
+                                    <li><i class="las la-check-circle"></i><a href="/index1.html#client">Client Portal</a></li>
 
-                                    <li><i class="las la-check-circle"></i><a href="#schedule">Schedule Appointment
+                                    <li><i class="las la-check-circle"></i><a href="/index1.html#schedule">Schedule Appointment
 
 </a></li>
 
-<li><i class="las la-check-circle"></i><a href="#contact">Contact Us</a></li>
+<li><i class="las la-check-circle"></i><a href="/index1.html#contact">Contact Us</a></li>
 
-<li><i class="las la-check-circle"></i><a href="#">Login</a></li>
+<li><i class="las la-check-circle"></i><a href="https://aitstax.securefilepro.com/portal/#/login">Login</a></li>
 
                                 </ul>
 
