--- a/blog2.html
+++ b/blog2.html
@@ -155,7 +155,7 @@
 
                                         <li class="nav-item">
 
-                                            <a class="nav-link" href="#about">About Us
+                                            <a class="nav-link" href="/index1.html#about">About Us
 
 
 
@@ -169,7 +169,7 @@
 
                                         <li class="nav-item">
 
-                                            <a class="nav-link" href="#blog">Blog
+                                            <a class="nav-link" href="/index1.html#blog">Blog
 
 
 
@@ -181,7 +181,7 @@
 
                                         <li class="nav-item">
 
-                                            <a class="nav-link" href="#resource">Resources
+                                            <a class="nav-link" href="/index1.html#resource">Resources
 
 
 
@@ -193,7 +193,7 @@
 
                                         <li class="nav-item">
 
-                                            <a class="nav-link" href="#client">Client portal
+                                            <a class="nav-link" href="/index1.html#client">Client portal
 
 
 
@@ -205,7 +205,7 @@
 
                                         <li class="nav-item">
 
-                                            <a class="nav-link" href="#schedule">Schedule Appointment
+                                            <a class="nav-link" href="/index1.html#schedule">Schedule Appointment
 
 
 
@@ -219,7 +219,7 @@
 
                                         <li class="nav-item">
 
-                                            <a class="nav-link" href="#contact">Contact Us</a>
+                                            <a class="nav-link" href="/index1.html#contact">Contact Us</a>
 
                                         </li>
 
