--- a/index1.html
+++ b/index1.html
@@ -946,7 +946,7 @@
 
                             <h4 class="text-white">Existing Portal Users</h4>
 
-                            <a class="main-btn mt-3" target="_blank" href="signinPage.html">Sign In Now</a>
+                            <a class="main-btn mt-3" target="_blank" href="https://aitstax.securefilepro.com/portal/#/login">Sign In Now</a>
 
                         </div>
 
@@ -1273,7 +1273,7 @@
 
                                         <li><i class="las la-check-circle"></i><a href="#contact">Contact Us</a></li>
 
-                                        <li><i class="las la-check-circle"></i><a href="signinPage.html">Login</a></li>
+                                        <li><i class="las la-check-circle"></i><a href="https://aitstax.securefilepro.com/portal/#/login">Login</a></li>
 
                                     </ul>
 
