--- a/blog2.html
+++ b/blog2.html
@@ -279,7 +279,7 @@
     <div id="blog-container-2" class="blog2-container">
       
     </div>
-
+<div id="pagination-container"></div>
 
 
     <!-- footer area -->
