--- a/index1.html
+++ b/index1.html
@@ -233,7 +233,7 @@
                         <div class="header-contact">
 
                             <div class="header-contact-info">
-                                <p><a href="#" class="main-btn">Log In</a></h6>
+                                <p><a href="https://aitstax.securefilepro.com/portal/#/login" class="main-btn">Log In</a></h6>
 
                             </div>
 
@@ -295,7 +295,7 @@
 
                                 <a href="#schedule" class="main-btn">Schedule Now</a>
 
-                                <a href="lawEnforcement.html" class="main-btn">Law Enforcement Special!!</a>
+                                <a href="https://www.aitstax.com/law/" class="main-btn">Law Enforcement Special!!</a>
 
                             </div>
 
