css resposnive fixed

--- a/blog2.html
+++ b/blog2.html
@@ -276,10 +276,12 @@
 
     <!-- container area -->
     
-    <div id="blog-container-2" class="blog2-container">
-      
-    </div>
+    <div class="container">
+    <div id="blog-container-2" class="row blog2-container">
 
+      </div>
+    </div>
+<div id="pagination-container"></div>
 
 
     <!-- footer area -->
