style issue and form issue fix

--- a/index1.html
+++ b/index1.html
@@ -627,7 +627,7 @@
 
                     <div class="col-xl-6 col-lg-6 col-12 wow fadeInUp  animated" data-wow-delay="200ms"
                         style="visibility: visible; animation-delay: 200ms; animation-name: fadeInUp;">
-                        <h6>Latest From Our Blog</h6>
+                        <h6 class="new-latest">Latest From Our Blog</h6>
                         <div id="blog-container" class="blog-container"></div>
 
 
@@ -647,7 +647,7 @@
 
                         </div>
                         
-                        <a style="margin-top: 10px;" href="/blog2.html">View all Blogs</a>
+                        <a class="list-blog blog-list" href="/blog2.html">View all Blogs</a>
                     </div>
 
 
@@ -1158,7 +1158,7 @@
                                             <input type="email" id="email" placeholder="Email">
                                         </div>
                                         <div class="col-lg-6 col-12">
-                                            <label>Phone</label>
+                                            <label>Phone Number</label>
                                             <input type="text" id="phone" placeholder="Phone Number">
                                         </div>
                                         <div class="col-lg-6 col-12">
