--- a/index1.html
+++ b/index1.html
@@ -261,7 +261,7 @@
 
                     <div class="header-top-link text-center">
 
-                        <h4 class="text-white"> Associate Income Tax <a href="#contact">Contact Us</a></h4>
+                        <h4 class="text-white"> Associated Income Tax Services <a href="#contact">Contact Us</a></h4>
 
                     </div>
 
