--- a/index1.html
+++ b/index1.html
@@ -951,7 +951,8 @@
 
     <section id="client">
 
-        <div class="faq-section faq-two  section-padding pt-0">
+        <div class="faq-section faq-two  section-padding pt-0" data-aos="fade-up"
+        data-aos-anchor-placement="center-center">
 
             <div class="container">
 
@@ -960,7 +961,7 @@
                     <div class="col-xl-12 col-lg-12 col-md-12 col-12 mx-auto wow fadeInUp animated"
                         data-wow-delay="200ms">
 
-                        <div class="section-title text-center">
+                        <div class="section-title text-center" >
 
                             <p>Client Portal</p>
 
