update new changes

--- a/about.html
+++ b/about.html
@@ -117,33 +117,33 @@
                   >
                     <ul class="navbar-nav m-auto new-nav">
                       <li class="nav-item">
-                        <a class="nav-link active" href="#home">Home </a>
+                        <a class="nav-link active" href="/index1.html">Home </a>
                       </li>
 
                       <li class="nav-item">
-                        <a class="nav-link" href="#about">About Us </a>
+                        <a class="nav-link" href="/index1.html#about">About Us </a>
                       </li>
 
                       <li class="nav-item">
-                        <a class="nav-link" href="#blog">Blog </a>
+                        <a class="nav-link" href="/index1.html#blog">Blog </a>
                       </li>
 
                       <li class="nav-item">
-                        <a class="nav-link" href="#resource">Resources </a>
+                        <a class="nav-link" href="/index1.html#resource">Resources </a>
                       </li>
 
                       <li class="nav-item">
-                        <a class="nav-link" href="#client">Client portal </a>
+                        <a class="nav-link" href="/index1.html#client">Client portal </a>
                       </li>
 
                       <li class="nav-item">
-                        <a class="nav-link" href="#schedule"
+                        <a class="nav-link" href="/index1.html#schedule"
                           >Schedule Appointment
                         </a>
                       </li>
 
                       <li class="nav-item">
-                        <a class="nav-link" href="#contact">Contact Us</a>
+                        <a class="nav-link" href="/index1.html#contact">Contact Us</a>
                       </li>
                     </ul>
                   </div>
@@ -228,7 +228,7 @@
                         </div> -->
                 <div class="founder-content">
                   <div class="founder-title">
-                    <h5>Jhon Richard, <span>Founder</span></h5>
+                    <h5>Jhon Doe, <span>Founder</span></h5>
                   </div>
                   <p>
                     Duis aute irure dolor in reprehenderit in voluptate velit
@@ -322,7 +322,7 @@
                 <img src="assets/img/d1.png" alt="" />
               </div>
               <div class="team-details">
-                <h4>Debra Harris</h4>
+                <h4>Debra</h4>
                 <h6>Tax Advisor</h6>
                 <p>Nemo enim ipsam voluptatem quia voluptas sit aspernatur</p>
                 <!-- <div class="social-link">
@@ -343,8 +343,8 @@
                 <img src="assets/img/d9.png" alt="" />
               </div>
               <div class="team-details">
-                <h4>D.A Fanlink</h4>
-                <h6>Tax Advisor</h6>
+                <h4>D.A Fan</h4>
+                <h6>Advisor</h6>
                 <p>Nemo enim ipsam voluptatem quia voluptas sit aspernatur</p>
                 <!-- <div class="social-link">
                             <a href="#">FB</a>
@@ -364,8 +364,8 @@
                 <img src="assets/img/d8.png" alt="" />
               </div>
               <div class="team-details">
-                <h4>Rio Ferdinend</h4>
-                <h6>Tax Advisor</h6>
+                <h4>Rio</h4>
+                <h6>Advisor</h6>
                 <p>Nemo enim ipsam voluptatem quia voluptas sit aspernatur</p>
                 <!-- <div class="social-link">
                             <a href="#">FB</a>
@@ -385,8 +385,8 @@
                 <img src="assets/img/d9.png" alt="" />
               </div>
               <div class="team-details">
-                <h4>Loraine R. Redy</h4>
-                <h6>Tax Advisor</h6>
+                <h4>Loraine R.</h4>
+                <h6>Advisor</h6>
                 <p>Nemo enim ipsam voluptatem quia voluptas sit aspernatur</p>
                 <!-- <div class="social-link">
                             <a href="#">FB</a>
@@ -406,8 +406,8 @@
                 <img src="assets/img/d1.png" alt="" />
               </div>
               <div class="team-details">
-                <h4>Carlos L. Martin</h4>
-                <h6>Tax Advisor</h6>
+                <h4>Carlos L.</h4>
+                <h6>Advisor</h6>
                 <p>Nemo enim ipsam voluptatem quia voluptas sit aspernatur</p>
                 <!-- <div class="social-link">
                             <a href="#">FB</a>
@@ -427,8 +427,8 @@
                 <img src="assets/img/d8.png" alt="" />
               </div>
               <div class="team-details">
-                <h4>John Acampora</h4>
-                <h6>Tax Advisor</h6>
+                <h4>John doe</h4>
+                <h6>Advisor</h6>
                 <p>Nemo enim ipsam voluptatem quia voluptas sit aspernatur</p>
                 <!-- <div class="social-link">
                             <a href="#">FB</a>
