blog detail section fix

--- a/blog1.html
+++ b/blog1.html
@@ -308,10 +308,10 @@
         <div class="col-md-10 blog-main-detail">
           <div class="blog-content-wrap">
             <div class="blog-feature-img">
-              <img src="assets/img/trans-bg.jpg" alt="">
+              <img src="" alt="">
             </div>
             <p></p>
-            <!-- <div class="blog-quote-wrap">
+            <div class="blog-quote-wrap">
               <div class="quote-icon">
                 <i class="las la-quote-left"></i>
               </div>
@@ -319,7 +319,7 @@
                 <p></p>
                 <h6 class="blog-author"></h6>
               </div>
-            </div> -->
+            </div>
           </div>
         </div>
       </div>
