update new design

--- a/blog2.html
+++ b/blog2.html
@@ -231,14 +231,14 @@
 
                         </div>
 
-                        <div class="header-contact">
+                        <!-- <div class="header-contact">
 
                             <div class="header-contact-info">
                                 <p><a href="#" class="main-btn">Log In</a></h6>
 
                             </div>
 
-                        </div>
+                        </div> -->
 
 
 
