--- a/blog1.html
+++ b/blog1.html
@@ -226,13 +226,13 @@
 
                         </div>
 
-<div class="header-contact">
+<!-- <div class="header-contact">
 
     <div class="header-contact-info"><p><a href="#" class="main-btn">Log In</a></h6>
 
     </div>
 
-</div>
+</div> -->
 
                     
 
