add link and new changes

--- a/index1.html
+++ b/index1.html
@@ -429,7 +429,7 @@
                                     <div class="card-body">
                                         <div class="content">
                                             <div class="feature-content">
-                                                <a href="https://www.irs.gov/refunds" class="text-white"
+                                                <a href="https://www.irs.gov/refunds" class="text-white" target="_blank"
                                                     onclick="return confirmRedirect(event)">
                                                     Internal
                                                     Revenue Service
@@ -459,7 +459,7 @@
                                         <div class="content">
                                             <div class="feature-content">
                                                 <a href="https://www.irs.gov/payments" class="text-white"
-                                                    onclick="return confirmRedirect(event)">
+                                                    target="_blank" onclick="return confirmRedirect(event)">
                                                     Internal
                                                     Revenue Service
                                                 </a>
@@ -488,7 +488,8 @@
                                         <div class="content">
                                             <div class="feature-content">
                                                 <a href="https://www.irs.gov/filing/wheres-my-amended-return"
-                                                    class="text-white" onclick="return confirmRedirect(event)">Internal
+                                                    target="_blank" class="text-white"
+                                                    onclick="return confirmRedirect(event)">Internal
                                                     Revenue Service</a>
                                             </div>
                                         </div>
@@ -512,7 +513,7 @@
                                     <div class="card-body">
                                         <div class="content">
                                             <div class="feature-content">
-                                                <a href="https://www.irs.gov/coronavirus/get-my-payment"
+                                                <a href="https://www.irs.gov/coronavirus/get-my-payment" target="_blank"
                                                     class="text-white" onclick="return confirmRedirect(event)">Internal
                                                     Revenue Service</a>
                                             </div>
