--- a/index1.html
+++ b/index1.html
@@ -585,7 +585,7 @@
                     <div class="col-xl-6 col-lg-6 col-12 wow fadeInLeft  animated" data-wow-delay="200ms"
                         style="visibility: visible; animation-delay: 200ms; animation-name: fadeInLeft;">
                         <div class="process-bg"
-                            style="background-image: url(assets/img/new-img/calendar-agenda-event-meeting-reminder-schedule-graphic-concept\ \(1\).jpg);">
+                            style="background-image: url(assets/img/new-img/meetingSchedule.webp);">
                             <div class="process-tag-title">
                                 <h4>Walk-ins are welcome, but availability is not guaranteed.</h4>
                             </div>
